prevent white space wrapping on row items for a consitent look

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -176,6 +176,7 @@ a {
     flex: 1;
     text-align: center;
     overflow: scroll;
+    white-space: nowrap;
     -ms-overflow-style: none;
     scrollbar-width: none;
     &::-webkit-scrollbar{
